--- a/AdoProjectManager/Views/Home/Index.cshtml
+++ b/AdoProjectManager/Views/Home/Index.cshtml
@@ -11,7 +11,13 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1><i class="bi bi-folder2-open"></i> Azure DevOps Projects</h1>
     <div>
-        <button class="btn btn-outline-primary" onclick="location.reload()">
+        <a href="/ProjectClone" class="btn btn-primary me-2">
+            <i class="bi bi-copy"></i> Clone Project
+        </a>
+        <a href="/ProjectWizard" class="btn btn-outline-primary me-2">
+            <i class="bi bi-magic"></i> Element Wizard
+        </a>
+        <button class="btn btn-outline-secondary" onclick="location.reload()">
             <i class="bi bi-arrow-clockwise"></i> Refresh
         </button>
     </div>
