--- a/AdoProjectManager/Views/Home/_ProjectsTable.cshtml
+++ b/AdoProjectManager/Views/Home/_ProjectsTable.cshtml
@@ -59,6 +59,12 @@
                                                     <i class="bi bi-box-arrow-up-right"></i> Open in Azure DevOps
                                                 </a>
                                             </li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li>
+                                                <a class="dropdown-item" href="/ProjectWizard?sourceProject=@project.Id">
+                                                    <i class="bi bi-magic"></i> Element Transfer Wizard
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
